--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		
 
 		<section id="one" class="wrapper style13 align-center">
-  			<h2> Migrants, migration : de quoi parle-t-on ? </h2>
+  			<header> Migrants, migration : de quoi parle-t-on ? </header>
 
 		<!-- Graphe intro Irène -->
 
@@ -88,23 +88,25 @@
 				djedjedj
 				</div>
 			</div>
-
-
 			
 		</section> 
+		
 		<!-- Camembert Aliénor -->
 <section id="three" class="wrapper style13 align-center">
-	<h2> Guacamole et pomme de terre? </h2>
 
-<div class="container">
+<div class="container" style="display:flex;justify-content:space-between;">
 	
-<div id="alienore"></div>
+<div id="alienor"></div>
+			<div>  Définitions  <br>
+				jedjedje
+				<br>
+				dejdedj
+				<br>
+				djedjedj
+				</div>
 			</div>
-		
-
 		</section> 
 
-		
 
 	<!-- Deuxième partie -->
 		
@@ -129,7 +131,7 @@
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
 <div class="container">
-<iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="125%" height="500" frameborder="0">
+<iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="500" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
 			</div>
@@ -156,14 +158,16 @@
 	<!-- Troisième partie -->	
 		
 		<section id="three" class="wrapper style1 align-center">	
- 			<h2> Les migrants en France: qui sont-ils? </h2>
+ 			<header> Les migrants en France: qui sont-ils? </header>
 <!-- Origine -->
+			<h2> D'où viennent-ils? </h2>
 <div class="container" style="display:flex;justify-content:space-between;">		
 <iframe id="datawrapper-chart-3ODbC" src="//datawrapper.dwcdn.net/3ODbC/3/" frameborder="0" scrolling="no" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="306"></iframe> <script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["3ODbC"]={},window.datawrapper["3ODbC"].embedDeltas={"100":441,"200":360,"300":333,"400":333,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["3ODbC"].iframe=document.getElementById("datawrapper-chart-3ODbC"),window.datawrapper["3ODbC"].iframe.style.height=window.datawrapper["3ODbC"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["3ODbC"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("3ODbC"==b)window.datawrapper["3ODbC"].iframe.style.height=a.data["datawrapper-height"][b]+"px"}) </script>
 
 <iframe id="datawrapper-chart-sIMjl" src="//datawrapper.dwcdn.net/sIMjl/3/" frameborder="0" scrolling="no" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="322"></iframe> <script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["sIMjl"]={},window.datawrapper["sIMjl"].embedDeltas={"100":457,"200":376,"300":349,"400":349,"500":322,"600":322,"700":322,"800":322,"900":322,"1000":322},window.datawrapper["sIMjl"].iframe=document.getElementById("datawrapper-chart-sIMjl"),window.datawrapper["sIMjl"].iframe.style.height=window.datawrapper["sIMjl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["sIMjl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("sIMjl"==b)window.datawrapper["sIMjl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"}) </script>
 	</div>
 	
+			<h2> Quel âge ont-ils? </h2>
 <!-- Composition par âge de la population migrante -->
 <div class="container">
 <div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
