--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		
 
 		<section id="one" class="wrapper style13 align-center">
-  			<header> Migrants, migration : de quoi parle-t-on ? </header>
+  			<h1> Migrants, migration : de quoi parle-t-on ? </h1>
 
 		<!-- Graphe intro Irène -->
 
