--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   			<h1> Migrants, migration : de quoi parle-t-on ? </h1>
 
 		<!-- Graphe intro Irène -->
-
-			<div class="container"  style="display:flex;justify-content:space-between;" >
+			<h2> Réfugiés, demandeurs d'asile, déplacés internes... </h2>	
+		<div class="container"  style="display:flex;justify-content:space-between;" >
 					<div id="container"></div>
 				<div>  Définitions  <br>
 				jedjedje
@@ -92,19 +92,21 @@
 		</section> 
 		
 		<!-- Camembert Aliénor -->
+			<h2> Le statut de régufié, c'est quoi ? </h2>
 <section id="three" class="wrapper style13 align-center">
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-<div id="alienor"></div>
-			<div>  Définitions  <br>
-				jedjedje
-				<br>
-				dejdedj
-				<br>
-				djedjedj
-				</div>
-			</div>
+	<div>  Définitions  <br>
+		jedjedj
+		<br>
+		dejded
+		<br>
+		djedjedj
+		</div>
+	</div>
+	<div id="alienor"></div>
+	
 		</section> 
 
 
@@ -126,15 +128,17 @@
 
 
 		<section id="two" class="wrapper style12 align-center">
-  			<h2> La crise des migrants : un état des lieux </h2>
+  			<h1> La crise des migrants : un état des lieux </h1>
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
+			<h2> Quelques dates clé </h2>
 <div class="container">
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="500" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
 			</div>
+			
 		</section>
 		<!-- Carte Adeline -->
 <section id="two" class="wrapper style12 align-center">
@@ -158,7 +162,7 @@
 	<!-- Troisième partie -->	
 		
 		<section id="three" class="wrapper style1 align-center">	
- 			<header> Les migrants en France: qui sont-ils? </header>
+ 			<h1> Les migrants en France: qui sont-ils? </h1>
 <!-- Origine -->
 			<h2> D'où viennent-ils? </h2>
 <div class="container" style="display:flex;justify-content:space-between;">		
