--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		
 		<!-- Camembert Aliénor -->
 		<section id="three" class="wrapper style13 align-center">
-			<h2> Le statut de régufié, c'est quoi ? </h2>
+			<h2> Le statut de réfugié, c'est quoi ? </h2>
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
