--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</section> 
 		
 		<!-- Camembert Aliénor -->
-		<section id="three" class="wrapper style13 align-center">
+		<section id="three" class="wrapper style1 align-center">
 			<h2> Le statut de réfugié, c'est quoi ? </h2>
 
 <div class="container" style="display:flex;justify-content:space-between;">
@@ -142,21 +142,24 @@
 			
 		</section>
 		<!-- Carte Adeline -->
-<section id="two" class="wrapper style12 align-center">
+<section id="two" class="wrapper style1 align-center">
 			<div class="container">
 				<header>
 					<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
 					<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
 				</header>
 				<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
+	</div>
+</section>
 
 		<!-- Graph Aliénor (demandes d'asile en France) -->
 <!-- Demandeurs d'asile : nd de demandes acceptées / refusées -->
 
 <!-- <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 -->
+<section id="two" class="wrapper style13 align-center">
+
 <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-	</div>
 				
 </section>
 
