--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
+				<a href="globe.html"><img src="favicon-globe.ico" width="15" height="15" alt="">Home</a>
 				<h2>Lumière sur les migrations</h2>
 				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
