--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<a href="globe.html"><img src="favicon-globe.ico" width="50" height="50" alt=""></a>
+				<i class="fa fa-globe" width="50" height="50" aria-hidden="true"></i>
 				<h2>Lumière sur les migrations</h2>
 				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
