--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<i class="fa fa-globe" width="50" height="50" aria-hidden="true"></i>
+				<div style="font-size: 44px;">
+				<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+				</div>
 				<h2>Lumière sur les migrations</h2>
 				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
