--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 		
 
 		<section id="one" class="wrapper style13 align-center">
+			<div style="font-size: 100px;">
+			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			</div>
   		<h1> Migrants, migration : de quoi parle-t-on ? </h1>
 			
 		<!-- Graphe intro Irène -->
@@ -132,6 +135,9 @@
 
 
 		<section id="two" class="wrapper style12 align-center">
+			<div style="font-size: 100px;">
+			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			</div>
   			<h1> La crise des migrants : un état des lieux </h1>
 
 		<!-- Frise Aliénor -->
@@ -141,9 +147,8 @@
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="500" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
-			</div>
-			
-		</section>
+</div>			
+</section>
 		<!-- Carte Adeline -->
 <section id="two" class="wrapper style1 align-center">
 			<div class="container">
@@ -188,6 +193,9 @@
 	<!-- Quatrième partie -->	
 		
 		<section id="four" class="wrapper style1 align-center">	
+			<div style="font-size: 100px;">
+			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			</div>
  			<h2> Qu'en disent les candidats à la présidentielle? </h2>
 		
 	<!-- Partie Quentin -->
