--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<div style="font-size: 100px;">
 			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
 			</div>
-  		<h1> Migrants, migration : de quoi parle-t-on ? </h1>
+  		<h1 class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 			
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes... </h2>	
