--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		<!--<script src="https://code.jquery.com/jquery-1.11.0.js"></script>-->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
-		<script type="text/javascript" src="script3.js"></script>
-		<script type="text/javascript" src="demandes_asile_fr.js"></script>
+		<script type="text/javascript" src="script4.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!--		<script type="text/javascript" src="js/jquery.min.js"></script> -->
@@ -166,9 +165,9 @@
 <!-- <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 -->
 <section id="two" class="wrapper style13 align-center">
-
+<div class="container" >
 <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-				
+	</div>
 </section>
 
 	<!-- Troisième partie -->	
