--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script type="text/javascript" src="js/skel-layers.min.js"></script>
 		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="counter.js"></script>
+		 <script type="text/javascript" src="quizz.js"></script>
 		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
@@ -296,6 +297,9 @@ $(document).ready(function(){
 
 	<section id="five" class="wrapper style1 align-center">
 		<h2> Quizz </h2>
+		<div class="container">
+		 <div id="frame" role="content"></div> 
+		</div>
 	</section>
 		
 	<!-- Sixième partie -->	
