--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-François Copé" src="cope.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
 
-  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier <a class="def" href="#" data-toggle="tooltip" data-placement="left" title="Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent">hotspot </a> d’Europe
+  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
 
 </p> </div>
 
