--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one">Partie 1</a></li>
-						<li><a href="#two">Partie 2</a></li>
-						<li><a href="elements.html">Partie 3</a></li>
+						<li><a href="#one">De quoi parle-t-on ?</a></li>
+						<li><a href="#two">L'Europe et les migrants</a></li>
+						<li><a href="elements.html">Controverses</a></li>
 					</ul>
 				</nav>
 			</header>
