--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div style="font-size: 200px;">
-				<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+				<i class="fa fa-globe" style="color:white" aria-hidden="true"></i>
 				</div>
 				<h2>Lumière sur les migrations</h2>
 				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
