--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 				<div style="font-size: 200px;">
 				<i class="fa fa-globe" style="color:white" aria-hidden="true"></i>
 				</div>
-				<h2>Lumière sur les migrations</h2>
-				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
+				<h2 style="color:#009688">Lumière sur les migrations</h2>
+				<h3 style="color:#009688">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
 				<ul class="actions">
 					<li>
