--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one">De quoi parle-t-on ?</a></li>
+						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
 						<li><a href="#two">L'Europe et les migrants</a></li>
 						<li><a href="elements.html">Controverses</a></li>
 					</ul>
@@ -63,8 +63,8 @@
 				<div style="font-size: 200px;">
 				<i class="fa fa-globe" style="color:white" aria-hidden="true"></i>
 				</div>
-				<h2 style="color:#009688">Lumière sur les migrations</h2>
-				<h3 style="color:#009688">Déchiffrer la "crise des migrants" en Europe et en France </h3>
+				<h2>Lumière sur les migrations</h2>
+				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
 				<ul class="actions">
 					<li>
