--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
-						<li><a href="#two">L'Europe et les migrants</a></li>
-						<li><a href="elements.html">Controverses</a></li>
+						<li><a style="color:#009688" href="#one">  De quoi parle-t-on ?</a></li>
+						<li><a style="color:#009688" href="#two">L'Europe et les migrants</a></li>
+						<li><a style="color:#009688" href="elements.html">Controverses</a></li>
 					</ul>
 				</nav>
 			</header>
