--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+		<meta name="viewport" content="width=device-width" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		
 		
