--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a style="color:#009688" href="#one">  De quoi parle-t-on ?</a></li>
-						<li><a style="color:#009688" href="#two">L'Europe et les migrants</a></li>
-						<li><a style="color:#009688" href="elements.html">Controverses</a></li>
+						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
+						<li><a style="color:white" href="#two">L'Europe et les migrants</a></li>
+						<li><a style="color:white" href="elements.html">Controverses</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -61,10 +61,10 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div style="font-size: 200px;">
-				<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+				<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 				</div>
-				<h2 style="color:#009688">Lumière sur les migrations</h2>
-				<h3 style="color:#009688">Déchiffrer la "crise des migrants" en Europe et en France </h3>
+				<h2 style="color:#004953">Lumière sur les migrations</h2>
+				<h3 style="color:#004953">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
 				<ul class="actions">
 					<li>
