--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
 		<section id="one" class="wrapper style13 align-center">
 			<div style="font-size: 100px;">
-			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
-  		<h1 class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
+  		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 			
 		<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes... </h2>	
