--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 		
-		<link rel="icon" href="favicon-globe.ico" type="image/x-icon">
+		<link rel="icon" href="favicon-globe-b.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="favicon-globe.ico" type="image/x-icon">
 		<!-- Fin -->
 	</head>
