--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 	<!-- Deuxième partie -->
 		
-		<!-- Banner2 -->
+		<!-- Banner2 
 			<section id="banner2">
 				<h2>Deuxieme partie</h2>
 				<h3 style="color:white"> Comment l'Europe gère-t-elle les migrations? </h3>
@@ -131,7 +131,9 @@
 				</ul>
 			</section>
 
-			
+			-->
+		
+	<div class="paraxify intermede-1" style="background-position: center center;"> </div>
 
 
 		<section id="two" class="wrapper style12 align-center">
