--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
 <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 	</div>
 </section>
-
+<div class="paraxify intermede-2" style="background-position: center center;">
+</div>
 	<!-- Troisième partie -->	
 		
 		<section id="three" class="wrapper style1 align-center">	
