--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@ $(document).ready(function(){
 });
 </script>
 
-	</section>			
+	</section>
+	<div class="paraxify intermede-3" style="background-position: center center;">
+	</div>
 
 	<!-- Cinquième partie -->	
 
