--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<ul>
 						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
 						<li><a style="color:white" href="#two">L'Europe et les migrants</a></li>
-						<li><a style="color:white" href="#three">La France et les migrants</a></li>
+						<li><a style="color:white" href="#france">La France et les migrants</a></li>
 						<li><a style="color:white" href="#quizz">Quizz</a></li>
 						<li><a style="color:white" href="#five">Quelques initiatives</a></li>
 						
@@ -181,7 +181,7 @@
 </div>
 	<!-- Troisième partie -->	
 		
-		<section id="three" class="wrapper style1 align-center">	
+		<section id="france" class="wrapper style1 align-center">	
  			<h1> Les migrants en France: qui sont-ils? </h1>
 <!-- Origine -->
 			<h2> D'où viennent-ils? </h2>
