--- a/index.html
+++ b/index.html
@@ -316,7 +316,10 @@ $(document).ready(function(){
 	<!-- Sixième partie -->	
 	
 	<section id="five" class="wrapper style13 align-center">
-		<h3> Quelques exemples d'initiatives </h3>
+		<div style="font-size: 100px;">
+			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			</div>
+		<h1> Quelques exemples d'initiatives </h1>
 	</section>
 			
 
