--- a/index.html
+++ b/index.html
@@ -307,7 +307,10 @@ $(document).ready(function(){
 	<!-- Cinquième partie -->	
 
 	<section id="quizz" class="wrapper style1 align-center">
-		<h2> Quizz </h2>
+		<div style="font-size: 100px;">
+			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			</div>
+		<h1> Quizz </h1>
 		<div class="container">
 		 <div id="frame" role="content"></div> 
 		</div>
