--- a/index.html
+++ b/index.html
@@ -103,14 +103,12 @@
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-	<div>  Définitions  <br>
-		Alors que le statut de réfugié et le statut conféré par la protection subsidiaire sont définis par le droit de l’Union, le statut humanitaire relève de la législation nationale, ce qui explique pourquoi il n’est pas applicable dans l’ensemble des États membres de l’Union.
-		<br>
+	<div style="color:#004953">  Définitions  <br>
 		Un <b> réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle; qui craint avec raison d’y être persécutée du fait de son appartenance communautaire, de sa religion, de sa nationalité, de son appartenance à un certain groupe social ou de ses opinions politiques, et qui ne peut ou ne veut se réclamer de la protection de ce pays ou y retourner en raison de la dite crainte.
 		<br>
 		Le bénéfice de la <b> protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave (peine de mort, torture, traitement inhumain, conflit armé, etc.).
 		<br>
-		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie, en fonction des pays.	
+		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux statuts précédents. 
 </div>
 	<div id="alienor"></div>
 
