--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@ $(document).ready(function(){
 	</section>
 		
 	<div class="paraxify intermede-4" style="background-position: center center;">
+	</div>
 
 		
 	<!-- Sixième partie -->	
