--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 					<ul>
 						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
 						<li><a style="color:white" href="#two">L'Europe et les migrants</a></li>
-						<li><a style="color:white" href="elements.html">Controverses</a></li>
+						<li><a style="color:white" href="#three.html">La France et les migrants</a></li>
+						<li><a style="color:white" href="#four.html">Quizz</a></li>
+						<li><a style="color:white" href="#five.html">Quelques initiatives</a></li>
 					</ul>
 				</nav>
 			</header>
