--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
 
 	<!-- Quatrième partie -->	
 		
-		<section id="four" class="wrapper style1 align-center">	
- 			<h2> Qu'en disent les candidats à la présidentielle? </h2>
+ 	<h2> Qu'en disent les candidats à la présidentielle? </h2>
 		
 	<!-- Partie Quentin -->
 
@@ -302,7 +301,10 @@ $(document).ready(function(){
 
 	<!-- Cinquième partie -->	
 
-	<section id="five" class="wrapper style1 align-center">
+	<section id="four" class="wrapper style1 align-center">
+		<div style="font-size: 200px;">
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
+		</div>
 		<h2> Quizz </h2>
 		<div class="container">
 		 <div id="frame" role="content"></div> 
@@ -316,6 +318,9 @@ $(document).ready(function(){
 	<!-- Sixième partie -->	
 	
 	<section id="five" class="wrapper style13 align-center">
+		<div style="font-size: 200px;">
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
+		</div>
 
 		<h3> Quelques exemples d'initiatives </h3>
 	</section>
