--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
 		<section id="two" class="wrapper style12 align-center">
 			<div style="font-size: 100px;">
-			<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
-  			<h1> La crise des migrants : un état des lieux </h1>
+  			<h1 style="color:#004953"> La crise des migrants : un état des lieux </h1>
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
