--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 		
 		<section id="three" class="wrapper style1 align-center">
 		<div style="font-size: 100px;">
-		<i class="fa fa-globe" style="color:#009688" aria-hidden="true"></i>
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
- 			<h1> Les migrants en France: qui sont-ils? </h1>
+ 			<h1 style="color:#004953"> Les migrants en France: qui sont-ils? </h1>
 <!-- Origine -->
 			<h2> D'où viennent-ils? </h2>
 <div class="container" style="display:flex;justify-content:space-between;">		
@@ -305,7 +305,7 @@ $(document).ready(function(){
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
-		<h2> Quizz </h2>
+		<h1 style="color:#004953"> Quizz </h1>
 		<div class="container">
 		 <div id="frame" role="content"></div> 
 		</div>
@@ -322,7 +322,7 @@ $(document).ready(function(){
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 
-		<h3> Quelques exemples d'initiatives </h3>
+		<h1 style="color:#004953"> Quelques exemples d'initiatives </h1>
 	</section>
 			
 
