--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 					<ul>
 						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
 						<li><a style="color:white" href="#two">L'Europe et les migrants</a></li>
-						<li><a style="color:white" href="#three.html">La France et les migrants</a></li>
-						<li><a style="color:white" href="#four.html">Quizz</a></li>
-						<li><a style="color:white" href="#five.html">Quelques initiatives</a></li>
+						<li><a style="color:white" href="#france">La France et les migrants</a></li>
+						<li><a style="color:white" href="#quizz">Quizz</a></li>
+						<li><a style="color:white" href="#init">Quelques initiatives</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -178,7 +178,7 @@
 </div>
 	<!-- Troisième partie -->	
 		
-		<section id="three" class="wrapper style1 align-center">
+		<section id="france" class="wrapper style1 align-center">
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
@@ -300,7 +300,7 @@ $(document).ready(function(){
 
 	<!-- Cinquième partie -->	
 
-	<section id="four" class="wrapper style1 align-center">
+	<section id="quizz" class="wrapper style1 align-center">
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
@@ -316,7 +316,7 @@ $(document).ready(function(){
 		
 	<!-- Sixième partie -->	
 	
-	<section id="five" class="wrapper style13 align-center">
+	<section id="init" class="wrapper style13 align-center">
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
