--- a/index.html
+++ b/index.html
@@ -391,26 +391,17 @@ $(document).ready(function(){
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Contact Us</h3>
 							<ul class="icons">
-								<li><a href="#" class="icon rounded fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon rounded fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon rounded fa-pinterest"><span class="label">Pinterest</span></a></li>
-								<li><a href="#" class="icon rounded fa-google-plus"><span class="label">Google+</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ir%C3%A8ne-hu-88a3648b/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="tabular">
-								<li>
-									<h3>Address</h3>
-									1234 Somewhere Road<br>
-									Nashville, TN 00000
-								</li>
-								<li>
+																<li>
 									<h3>Mail</h3>
 									<a href="#">someone@untitled.tld</a>
 								</li>
-								<li>
-									<h3>Phone</h3>
-									(000) 000-0000
-								</li>
+								
 							</ul>
 						</section>
 					</div>
