--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ $(document).ready(function(){
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 
-		<h1 style="color:#004953"> Quelques exemples d'initiatives </h1>
+		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
 	</section>
 			
 
@@ -363,6 +363,17 @@ $(document).ready(function(){
 					</footer> 
 				</div> 
 			</section>
+
+
+<!-- Septieme partie -->	
+	
+	<section id="init" class="wrapper style13 align-center">
+		<div style="font-size: 100px;">
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
+		</div>
+
+		<h1 style="color:#004953"> Et les ENSAE dans tout ça ?  </h1>
+	</section>
 -->
 		<!-- Footer -->
 			<footer id="footer">
