--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ $(document).ready(function(){
 				<div class="container">
 					<div class="row">
 						<section class="4u 6u(medium) 12u$(small)">
-							<h3>Lorem ipsum</h3>
+							<h3>Nos sources </h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, cumque!</p>
 							<ul class="alt">
 								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
@@ -390,7 +390,7 @@ $(document).ready(function(){
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
-							<h3>Nostrum, repellat!</h3>
+							<h3>Pourquoi ce projet § </h3>
 							<p>Tenetur voluptate exercitationem eius tempora! Obcaecati suscipit, soluta earum blanditiis.</p>
 							<ul class="alt">
 								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
@@ -400,7 +400,7 @@ $(document).ready(function(){
 							</ul>
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
-							<h3>Contact Us</h3>
+							<h3>Qui sommes-nous ?</h3>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
